added contact info field in about page and setting

--- a/about.html
+++ b/about.html
@@ -29,10 +29,11 @@
     
     <hr>
 
-    <section id="about">
+    <section id="contact">
+        <h2> Contact Info</h2>
         <ul>
             <li>
-                <a href="index.html">Linkedin</a>
+                <a href="https://www.linkedin.com/in/ngoc-le-02227a53/">Linkedin</a>
             </li>
             <li>Email: ngocle@outlook</li>
         </ul>
