minor changes to index and portfolio

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Ngoc Le</title>
@@ -28,7 +28,7 @@
       <hr>
 
       <section class="intro">
-        <img src="images/Ngoc_pic.jpg" />
+        <img src="images/Ngoc_pic.jpg" alt="Ngoc profile picture" />
         <h1>Welcome to my portfolio!</h1>
         <p>My name is Ngoc Le and I am currently pursuing a career in programming.</p> 
         <p>Please check out my coding projects in the Portfolio link above.</p>
@@ -38,7 +38,7 @@
 
       <section class="footer">
         <div>
-          <p>© 2019 Ngoc Le</p>
+          <h6>© 2019 Ngoc Le</h6>
         </div>
       </section>
 
