--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -30,19 +30,20 @@
             <hr>
 
     <ul class="portfolio">
-        <a href="https://github.com/lebaongoc/hotel">
-            <li><img src='images/hotel.jpg'alt="hotel room"></li>
-            <p>Hotel</p>
-        </a> 
-        <a href="https://github.com/lebaongoc/grocery-store">
-            <li><img src='images/grocery_store.jpg'alt="grocery_store"></li>
-            <p>Grocery-Store</p>
-        </a> 
-        <a href="https://github.com/lebaongoc/oo-ride-share">
-            <li><img src='images/rideshare.png'alt="hotel room"></li>
-            <p>RideShare</p>
-        </a> 
         <li>
+            <a href="https://github.com/lebaongoc/hotel"><img src='images/hotel.jpg' alt="hotel room"></a>
+            <p>Hotel</p>
+        </li>
+    
+        <li>
+            <a href="https://github.com/lebaongoc/grocery-store"><img src='images/grocery_store.jpg' alt="grocery_store"></a>
+            <p>Grocery-Store</p>
+        </li>
+
+        <li>
+            <a href="https://github.com/lebaongoc/oo-ride-share"><img src='images/rideshare.png' alt="hotel room"></a>
+            <p>RideShare</p>
+        </li>
     </ul>
 
 </body>
