added alt to picture

--- a/hobby-blog.html
+++ b/hobby-blog.html
@@ -32,7 +32,7 @@
     <main id="hobbies">
         <article>
             <h2>Cooking</h2>
-            <img src="images/cooking.jpg">
+            <img src="images/cooking.jpg" alt="cooking">
            
             <section class="recipe">
                 <h4>Favourite Recipes</h4>
