Changes some styles

--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/style.css">
   </head>
+
   <body>
     <nav class="navbar">
       <ul class="nav">
         <li class="navbar-name"><a href="#">
           Startrly</a>
           </li>
+          <li class="hacky">🦒</li>
            <li class="action"><a href="#">
             Try Now!</a>
           </li>
